# xdiff

./: Cargo.toml
examples/: atty.rs  config.rs
fixtures/: test.yaml  xreq_test.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
