[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xdiff"
path = "src/bin/xdiff.rs"

[[bin]]
name = "xreq"
path = "src/bin/xreq.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
atty = "0.2.14"
clap = { version = "4.2.1", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.4"
http-serde = "1.1.2"
mime = "0.3.17"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"]}
rustls = { version = "0.21.0", default-features = false }
serde = "1.0.159"
serde_json = "1.0.95"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.21"
similar = { version = "2.2.1", features = ["default", "inline"] }
syntect = "5.0.0"
tokio = { version = "1.27.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
